tests/src/frontend/typechecking/exhaustiveness/invalid/empty_type1.sk
fun troll<T: Int & Bool>(x: T): void {
  x match {
  | Int _ -> void
  | Bool _ -> void
  }
}

fun main(): void {
  print_string("Pass")
}
